
   - ofaPReferences: make the dialog non-modal (todo #992).

 Bug fixes:

   - ofaIDateFilter: keep both 'from' and 'to' dates as user preferences (todo #978).

 Other changes:

   - Do not install the resources which are managed as GResource (todo #970).
   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
   - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).
   - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
   - ofaHub: migrate to G_ADD_PRIVATE (todo #994).
   - ofaIPrefsPage: have an error message on init() and apply() methods.
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPReferences: move user interface to GResource (todo #826).
   - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
   - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: rename ofo_bat_get|set_begin|end methods (todo #996).
   - ofoBatLine: migrate to G_ADD_PRIVATE (todo #994).
   - ofoClass: migrate to G_ADD_PRIVATE (todo #994).
   - ofoConcil: migrate to G_ADD_PRIVATE (todo #994).
   - ofoCurrency: migrate to G_ADD_PRIVATE (todo #994).
   - ofoDossier: migrate to G_ADD_PRIVATE (todo #994).
   - ofoEntry: migrate to G_ADD_PRIVATE (todo #994).

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 2016-02-14

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).
   - ofaBatPage: select newly imported BAT file (todo #993).
   - ofaBatSelect: display unused count (todo #990) .