@@ -38,6 +38,7 @@
    - Do not install the resources which are managed as GResource (todo #970).
    - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
    - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).
+   - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
    - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
    - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
    - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
